--- a/webui/assets/css/customize.css
+++ b/webui/assets/css/customize.css
@@ -19,3 +19,15 @@
     right: 10px;
     z-index: 999;
 }
+
+.offcanvas.offcanvas-start {
+    /*
+    top: 0;
+    left: 0;
+    */
+    width: calc(2*var(--bs-offcanvas-width));
+    /*
+    border-right: var(--bs-offcanvas-border-width) solid var(--bs-offcanvas-border-color);
+    transform: translateX(-100%);
+    */
+  }
