add tooltip feedback

--- a/webui/assets/css/customize.css
+++ b/webui/assets/css/customize.css
@@ -36,4 +36,8 @@
     --bs-tooltip-bg: var(--bs-primary);
   }
 
+.danger-tooltip {
+    --bs-tooltip-bg: var(--bs-danger);
+  }
+
 textarea[is="highlighted-code"] { padding: 8px; }
