--- a/ansible/roles/libresbc-container/templates/docker-compose.yml.j2
+++ b/ansible/roles/libresbc-container/templates/docker-compose.yml.j2
@@ -2,6 +2,7 @@
 # https://dockerlabs.collabnix.com/docker/cheatsheet
 # https://github.com/compose-spec/compose-spec/blob/master/spec.md]
 # # pwd=libresbc: docker-compose -f build/docker/docker-compose.yml up
+
 services:
   rdb:
     hostname: rdb
@@ -16,6 +17,14 @@ services:
     labels:
       - libresbc.component=rdb
       - libresbc.version={{_version}}
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 60s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
+      start_interval: 4s
+
   liberator:
     hostname: liberator
     container_name: liberator
@@ -34,13 +43,22 @@ services:
       - libresbc.version={{_version}}
     env_file:
       - {{libresbc_sw_path}}/libre.env
+    healthcheck:
+      test: ["CMD", "curl", "-f", "{{liberator_api_url|default('http://127.0.0.1:8080')}}/heartbeat"]
+      interval: 60s
+      timeout: 5s
+      retries: 3
+      start_period: 45s
+      start_interval: 10s
     depends_on:
-      - rdb
+      rdb:
+        condition: service_healthy
+
   switch:
     hostname: switch
     container_name: switch
     restart: always
-    image: hnimminh/libresbc-freeswitch:1.10.11
+    image: hnimminh/libresbc-freeswitch:1.10.12-13-trixie #hnimminh/libresbc-freeswitch:1.10.11
     volumes:
       - {{libresbc_log_path}}/cdr:/var/log/libresbc/cdr
 {% if with_source %}
@@ -57,6 +75,13 @@ services:
       - {{libresbc_sw_path}}/libre.env
     environment:
       NODEID: {{nodeid}}
-      # ESL_ACL: any_v4.auto
     depends_on:
-      - liberator
+      liberator:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "fs_cli -H {{esl.host|default('127.0.0.1')}} -P {{esl.port|default('8021')}} -p {{esl.password|default('LIBRESBC')}} -x status | grep -q ^UP || exit 1"]
+      interval: 60s
+      timeout: 5s
+      retries: 3
+      start_period: 60s
+      start_interval: 30s
